--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
+    "build:dev": "env-cmd -f .env.development webpack --mode=development",
+    "build:test": "env-cmd -f .env.test webpack --mode=development",
+    "build:prod": "env-cmd -f .env.production webpack --mode=production",
     "build:webpack": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js",
@@ -26,6 +29,7 @@
     "babel-jest": "^27.5.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-important-stuff": "^3.0.0",
@@ -36,7 +40,7 @@
     "jest-cli": "^27.5.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "webpack": "^5.89.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^4.10.0",
     "webpack-config-single-spa-react": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
@@ -46,9 +50,11 @@
     "antd": "^5.21.1",
     "antd-style": "^3.7.0",
     "axios": "^1.7.7",
+    "env-cmd": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
-    "single-spa-react": "^4.3.1"
+    "single-spa-react": "^4.3.1",
+    "xlsx": "^0.18.5"
   }
 }
